syntax = "proto3";
option java_package = "com.nur.spring.aerospike.contracts";

service Greeter{
  rpc SayHello( HelloRequest) returns (HelloReply){}
}

message HelloRequest{
  string name = 1;
}

message HelloReply{
  string fromAerospike = 1;
}